# PointerSearcher-X

./: .gitignore  Cargo.toml  LICENSE  LICENSE.md  build.sh  changelog.md  entitlements.plist  faq-zh.md  readme-zh-hans.md  readme.md  rust-toolchain.toml  rustfmt.toml  tutorial-zh.md  tutorial.md  ups
.cargo/: config.toml
cli/: Cargo.toml
cli/src/: cmd.rs  consts.rs  create_map.rs  error.rs  lib.rs  main.rs  pointer_map.rs  pointer_path.rs  scanner.rs  scanner_map.rs  spinner.rs  utils.rs
command/: Cargo.toml  build.rs
command/src/: cmd.rs  error.rs  main.rs  ptrscan.rs  ptrscan_bindgen.rs  utils.rs
consts/: Cargo.toml
consts/src/: lib.rs
conv/: Cargo.toml
conv/src/: cmd.rs  lib.rs  main.rs  pince.rs
dumper/: Cargo.toml
dumper/src/: a.rs  chain.rs  cmd.rs  disk.rs  dump.rs  error.rs  lib.rs  main.rs  map.rs  net.rs  test.rs  utils.rs
dumper/src/check/: linux.rs  macos.rs  mod.rs  windows.rs
ffi/: .gitignore  Cargo.toml  build.rs  buld.sh  cbindgen.toml  main.c  ptrsx.h  ptrsx.py  ptrsx_unix.h  ptrsx_win.h  readme.md
ffi/src/: dumper.rs  error.rs  ffi_types.rs  lib.rs  scanner.rs
inject/: Cargo.toml
inject/examples/: testdylib.rs
inject/src/: aarch64  bindgen.rs  error.rs  ffi.rs  lib.rs  main.rs  utils.rs  wrapper.rs
libptrscan/: Cargo.toml  libptrs.h  libptrsx.h  ptrscan.py
libptrscan/src/: lib.rs
libptrscan/src/dump/: error.rs  load.rs  loader.rs  map.rs  mod.rs  rangemap.rs
libptrscan/src/dump/apple/: dump.rs  error.rs  info.rs  mod.rs  proc.rs
libptrscan/src/dump/linux/: dump.rs  error.rs  info.rs  mod.rs  proc.rs
libptrscan/src/ffi/: error.rs  ffi_type.rs  mod.rs  ptrscan.rs  scan.rs
libptrscan/src/scan/: mod.rs
libptrsx/: Cargo.toml
libptrsx/src/: consts.rs  error.rs  lib.rs  pointer_map.rs
linux-pc/: Cargo.toml
linux-pc/src/: check.rs  d32.rs  d64.rs  lib.rs  proc32.rs  proc64.rs  s64.rs
ptrsx/: Cargo.toml
ptrsx/src/: aob.rs  bin.rs  c.rs  c32.rs  c64.rs  check.rs  consts.rs  d32.rs  d64.rs  dumper.rs  e.rs  engine.rs  error.rs  file.rs  hex.rs  lib.rs  main.rs  map.rs  mapping_filter.rs  pointer_map.rs  pointer_path.rs  pointer_scan.rs  ptrd.rs  ptrs.rs  ptrsx.rs  ptrsx_d.rs  ptrsx_s.rs  rangemap.rs  s32.rs  s64.rs  sc64.rs  scanner.rs  try_trait.rs  utils.rs
ptrsx/src/check/: linux.rs  macos.rs  mod.rs
scanner/: Cargo.toml
scanner/src/: b.rs  cmd.rs  diff.rs  e.rs  error.rs  lib.rs  main.rs  map.rs  scan.rs  spinner.rs  utils.rs
src/: chunk.rs  cmd.rs  consts.rs  dm.rs  error.rs  lib.rs  main.rs  ms.rs  pc.rs  pointer.rs  prompt.rs  ps.rs  sm.rs  sp.rs
src/vmmap/: error.rs  mod.rs
src/vmmap/linux/: mod.rs  proc.rs
src/vmmap/macos/: ffi.rs  ffi_impl.rs  mod.rs  proc.rs
src/vmmap/virtual/: mod.rs
trash/: readme.md
trash/app/src/: cache.rs  debug.rs  demo.rs  error.rs  lib.rs  proc.rs  scan.rs  utils.rs
trash/chunk/src/: chunk.rs  lib.rs  main.rs  reader.rs  utils.rs
trash/ffi/src/: lib.rs  macos.rs  ns.rs  windows.rs
trash/macos/src/: ffi.rs  lib.rs  map.rs  os.rs  proc.rs  tag.rs
trash/vmmap/src/: error.rs  lib.rs  linux.rs  macos.rs
utils/: Cargo.toml
utils/src/: consts.rs  lib.rs
vmmap/: Cargo.toml  README.md
vmmap/src/: error.rs  lib.rs  main.rs  utils.rs  vc.rs
vmmap/src/linux/: mod.rs  proc.rs  proc32.rs  proc64.rs  utils.rs
vmmap/src/macos/: dyld64.rs  mod.rs  proc.rs  proc64.rs  utils.rs
vmmap/src/snapshot/: error.rs  map.rs  mod.rs  real.rs  snap.rs  vec.rs
vmmap/src/virtual/: mod.rs
vmmap/src/windows/: mod.rs  proc.rs  proc64.rs  utils.rs
wiki/: en.md  zh.md
