[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ups-cli"
path = "src/main.rs"

[dependencies.vmmap]
path = "../vmmap"
default-features = false

[dependencies.argh]
version = "0.1.10"
default-features = false

[dependencies.bincode]
version = "2.0.0-rc.3"
default-features = false
features = ["derive", "std"]