[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ptrsx"
path = "src/main.rs"

[dependencies.vmmap]
path = "../vmmap"
default-features = false

[dependencies.libptrsx]
path = "../libptrsx"
default-features = false

[dependencies.argh]
version = "0.1.10"
default-features = false