[package]
name = "cli"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "ptrsx-cli"
path = "src/main.rs"

[dependencies.vmmap]
path = "../vmmap"
default-features = false

[dependencies.ptrsx]
path = "../ptrsx"
default-features = false

[dependencies.argh]
version = "0.1.10"
default-features = false