[package]
name = "command"
version = "0.1.0"
edition = "2021"
build = "build.rs"

[[bin]]
name = "ptrscan"
path = "src/main.rs"

[dependencies.argh]
git = "https://github.com/google/argh"
default-features = false
features = ["help"]

[dependencies.rayon]
version = "1.10.0"
default-features = false

[dependencies.anstream]
version = "0.6.14"
default-features = false
features = ["auto", "wincon"]
