[package]
name = "dumper"
version = "0.2.0"
edition = "2021"

[[bin]]
name = "ptrsx-dumper"
path = "src/main.rs"

[dependencies.vmmap]
path = "../vmmap"
default-features = false

[dependencies.utils]
path = "../utils"
default-features = false

[dependencies.argh]
version = "0.1.10"
default-features = false
