[package]
name = "ffi"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib"]

[dependencies.utils]
path = "../utils"
default-features = false

[dependencies.vmmap]
path = "../vmmap"
default-features = false

[dependencies.ptrsx]
path = "../ptrsx"
default-features = false

[dependencies.ptrsx-scanner]
path = "../scanner"
default-features = false

[dependencies.dumper]
path = "../dumper"
default-features = false

[dependencies]
rustc-hash = { version = "1.1.0", optional = true }

[features]
fxhashset = ["dep:rustc-hash"]
default = ["fxhashset"]
