[package]
name = "inject"
version = "0.1.0"
edition = "2021"
authors = ["kk <kekelanact@gmail.com>"]
description = "macos m1 dynamic injection dylib"
keywords = ["injection", "macos"]
license = "MIT"

[dependencies]
argh = "0.1.12"

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.machx]
version = "0.4.8"
default-features = false
