[package]
name = "libptrscan"
version = "0.7.4"
edition = "2021"

[lib]
name = "ptrscan"
path = "src/lib.rs"
crate-type = ["cdylib", "staticlib"]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.machx]
version = "0.4.9"
default-features = false

[target.'cfg(all(target_arch = "x86_64", any(target_os = "linux", target_os = "android")))'.dependencies.iced-x86]
version = "1.21.0"
default-features = false
features = ["decoder", "no_std"]

[features]
nightly = []
