[package]
name = "vmmap"
version = "0.6.7"
edition = "2021"
authors = ["kk <kekelanact@gmail.com>"]
description = "Easy access to memory maps"
keywords = [
    "proc_maps",
    "virtualquery",
    "read_memory",
    "write_memory",
    "get_process_list",
]
license = "MIT"
repository = "https://github.com/kekeimiku/PointerSearcher-X/"
readme = "README.md"

[target.'cfg(windows)'.dependencies.windows-sys]
version = "0.52.0"
default-features = false
features = [
    "Win32_Foundation",
    "Win32_System_SystemInformation",
    "Win32_System_Diagnostics_Debug",
    "Win32_System_Memory",
    "Win32_System_ProcessStatus",
    "Win32_System_Threading",
    "Win32_System_Environment",
]

[target.'cfg(any(target_os = "macos", target_os = "ios"))'.dependencies.machx]
version = "0.4.8"
default-features = false
